fixed stuff and added an icon
No more scrollbar at the bottom added more info and fixed icon also updated footer.

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,15 +35,16 @@ a {
 }
 
 footer {
-  height: auto;
+  height: fit-content;
   background-color: black;
   color: white;
 }
 
 .footer-text {
-  margin-left: 30px;
+  margin-left: 10px !important;
   font-weight: 500;
   font-size: 30px;
+  margin: 0;
 }
 
 .website-link {
@@ -166,7 +167,7 @@ li {
   text-align: center;
   padding: 40px;
   background-color: rgb(41, 55, 68);
-  margin: -1px;
+  margin: 0;
   height: auto;
   padding-bottom: 100px;
 }
